# EzSQL

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt
ezsql/: CMakeLists.txt  build_deps.sh  ezsql.cpp  ezsql.h  note.txt
test/: test_basedbo.cpp  test_db.cpp  test_result.cpp  test_stmt.cpp
